update diffusion code

--- a/implementations/Diffusion models/diffusion.ipynb
+++ b/implementations/Diffusion models/diffusion.ipynb
@@ -23,7 +23,7 @@
         "id": "mK0uoSOubnOP"
       },
       "source": [
-        "Initialisation"
+        "## Initialisation"
       ]
     },
     {
@@ -113,7 +113,7 @@
         "id": "iQxUsrBba5wL"
       },
       "source": [
-        "Forward process"
+        "## Forward process"
       ]
     },
     {
@@ -248,7 +248,7 @@
         "id": "sSdbDKr5bfzB"
       },
       "source": [
-        "Model"
+        "## Model"
       ]
     },
     {
@@ -428,7 +428,7 @@
         "id": "771DusNZbxsP"
       },
       "source": [
-        "Training"
+        "## Training"
       ]
     },
     {
@@ -541,7 +541,7 @@
         "id": "IqhB2rbaygbH"
       },
       "source": [
-        "Sampling"
+        "## Sampling"
       ]
     },
     {
