--- a/implementations/GAN/WGAN-ConditionalGAN.ipynb
+++ b/implementations/GAN/WGAN-ConditionalGAN.ipynb
@@ -1,22 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Untitled3 (1).ipynb",
-      "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -24,7 +6,17 @@
         "id": "taCoInlowhaw"
       },
       "source": [
-        "This notebook aims to develop simple GANs(due to the long training time of GANs), three main ideas will be covered , first a simple GAN to generate Handwriten digits using Convolutional GAN ( by using transposed convolution OR upsamling and convolution), then the controllable and consitional generation idea will be visited, two type of losses will be used BCE loss and W-Loss since the research that is done till now dosent proove anyone of  them as superior to the other."
+        "# WGAN-Conditional GAN\n",
+        "\n",
+        "Auteurs : Lisa Giordani, Mouïn Ben Ammar, Yoldoz Tabei, Ilias Harkati (Groupe 6)\n",
+        "\n",
+        "Cours : Projet IA (IA321)\n",
+        "\n",
+        "Projet : Génération d'images (P13)\n",
+        "\n",
+        "Date : 13/11/21\n",
+        "\n",
+        "This notebook aims to develop simple GANs (due to the long training time of GANs), three main ideas will be covered, first a simple GAN to generate Handwriten digits using Convolutional GAN ( by using transposed convolution OR upsamling and convolution), then the controllable and consitional generation idea will be visited, two type of losses will be used BCE loss and W-Loss since the research that is done till now dosent proove anyone of  them as superior to the other."
       ]
     },
     {
@@ -33,14 +25,16 @@
         "id": "DGvTdKd8V6fK"
       },
       "source": [
-        "###Importing packages "
+        "### Importing packages "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "bdOSj0EYV6CS"
       },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from torch import nn\n",
@@ -66,15 +60,15 @@
         "            grads.append(m.weight.grad)\n",
         "    return grads, grad_hook\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uHFRpBZGy7gB"
       },
+      "outputs": [],
       "source": [
         "n_epochs = 100\n",
         "z_dim = 64 #random noise dimention\n",
@@ -100,9 +94,7 @@
         "    MNIST('.', download=True, transform=transform),\n",
         "    batch_size=batch_size,\n",
         "    shuffle=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -110,14 +102,16 @@
         "id": "FsDUmFP9YQaf"
       },
       "source": [
-        "####Generator"
+        "#### Generator"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "G4cPIVwxWIwi"
       },
+      "outputs": [],
       "source": [
         "##Usng upsamling and convolution\n",
         "\n",
@@ -158,9 +152,7 @@
         "def get_noise(n_samples, noise_dim, device='cpu'):\n",
         "    return torch.randn(n_samples, noise_dim, device=device)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -168,14 +160,16 @@
         "id": "uELAvjrhm4AP"
       },
       "source": [
-        "####Discriminator"
+        "### Discriminator"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "dJSJV8CjWItI"
       },
+      "outputs": [],
       "source": [
         "class Critic(nn.Module):\n",
         "\n",
@@ -202,15 +196,15 @@
         "    def forward(self, image):\n",
         "        disc_pred = self.disc(image)\n",
         "        return disc_pred.view(len(disc_pred), -1)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5cuo9L4VyTRg"
       },
+      "outputs": [],
       "source": [
         "gen = Generator(z_dim).to(device)\n",
         "gen_opt = torch.optim.Adam(gen.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
@@ -225,21 +219,19 @@
         "        torch.nn.init.constant_(m.bias, 0)\n",
         "gen = gen.apply(weights_init)\n",
         "crit = crit.apply(weights_init)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "BAPx0gjlzOGp"
       },
+      "outputs": [],
       "source": [
         "print(gen)\n",
         "print(crit)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -247,14 +239,16 @@
         "id": "QAk064FRdrlm"
       },
       "source": [
-        "####Gradient penalty"
+        "### Gradient penalty"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "mf1UhHs3doDH"
       },
+      "outputs": [],
       "source": [
         "def get_gradient(crit, real, fake, epsilon=0.5):\n",
         "  mixed_im=epsilon*real+(1-epsilon)*fake\n",
@@ -271,9 +265,7 @@
         "    gradient_norm = gradient.norm(2, dim=1)\n",
         "    penalty = ((1-gradient_norm)**2).mean()\n",
         "    return penalty\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,22 +273,22 @@
         "id": "dy5JvwDOhmsd"
       },
       "source": [
-        "###Losses : W-loss"
+        "### Losses : W-loss"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "9wBy47fBdn4P"
       },
+      "outputs": [],
       "source": [
         "def get_gen_loss(crit_fake_scores):\n",
         "  return -crit_fake_scores.mean()\n",
         "def get_crit_loss(crit_fake_pred, crit_real_pred, gp, lambd):\n",
         "  return -(crit_real_pred-crit_fake_pred-lambd*gp).mean()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,15 +296,17 @@
         "id": "aKPiujHFnFLv"
       },
       "source": [
-        "####Training :\n",
+        "### Training :\n",
         "The first cell is for the convolutional GAN , the second and third if you want to try the transposedconvolution one."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "hCDyZegj1LH_"
       },
+      "outputs": [],
       "source": [
         "### Upsamling + conv GAN\n",
         "\n",
@@ -382,15 +376,15 @@
         "            plt.show()\n",
         "\n",
         "        cur_step += 1\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "eEPsv5Y31rBv"
       },
+      "outputs": [],
       "source": [
         "# only run if u want to change the generator\n",
         "\n",
@@ -441,15 +435,15 @@
         "        torch.nn.init.constant_(m.bias, 0)\n",
         "gen = gen.apply(weights_init)\n",
         "crit = crit.apply(weights_init)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "SEFP6fJ41Kkh"
       },
+      "outputs": [],
       "source": [
         "### Transposed convlution GAN\n",
         "### Upsamling + conv GAN\n",
@@ -520,17 +514,6 @@
         "            plt.show()\n",
         "\n",
         "        cur_step += 1\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LczZHntKdnnH"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -539,16 +522,19 @@
         "id": "_Z-znJnDaYxu"
       },
       "source": [
-        "##Conditional generation\n",
+        "## Conditional generation\n",
+        "\n",
         "We'll restart from 0 , defining the models and training them.\n",
         "One key difference in this model is the input shape (we'll stack label information for both the noise and the images) "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "A2c68HMgcL0Y"
       },
+      "outputs": [],
       "source": [
         "class Generator(nn.Module):\n",
         "\n",
@@ -585,15 +571,15 @@
         "def get_noise(n_samples, input_dim, device='cpu'):\n",
         "\n",
         "    return torch.randn(n_samples, input_dim, device=device)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "a7QWGjq9cJOI"
       },
+      "outputs": [],
       "source": [
         "class Discriminator(nn.Module):\n",
         "\n",
@@ -622,15 +608,15 @@
         "\n",
         "        disc_pred = self.disc(image)\n",
         "        return disc_pred.view(len(disc_pred), -1)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xmrlFwufSvEl"
       },
+      "outputs": [],
       "source": [
         "import torch.nn.functional as F\n",
         "def get_one_hot_labels(labels, n_classes):\n",
@@ -639,9 +625,7 @@
         "def combine_vectors(x, y):\n",
         "    combined = torch.cat((x.float(), y.float()) ,dim=1 )\n",
         "    return combined"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -649,14 +633,16 @@
         "id": "fUvzdy7AbX9P"
       },
       "source": [
-        "######Training"
+        "### Training"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "dBadiIJWbaND"
       },
+      "outputs": [],
       "source": [
         "mnist_shape = (1, 28, 28)\n",
         "n_classes = 10\n",
@@ -685,15 +671,15 @@
         "\n",
         "gen = gen.apply(weights_init)\n",
         "disc = disc.apply(weights_init)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "N1P0OM9lcWQ2"
       },
+      "outputs": [],
       "source": [
         "\n",
         "cur_step = 0\n",
@@ -776,148 +762,25 @@
         "            plt.show()\n",
         "       \n",
         "        cur_step += 1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WiBRRvPZdHe3"
-      },
-      "source": [
-        "##Controlable Generation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6gwwUCfZcWOP"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PwL8WI0bcWLl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9Y3n8KqIcWI9"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vk-BVuOQcWGV"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "U6R1JGubvD1o"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jfDXaztnvDzB"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bf99THNBvDwJ"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "f7_Dy3TYvDtl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Do-xzFOuvDle"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Au8Ngk-CvDiR"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iEypu3v4vDfA"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lyBlZbrZvDTA"
-      },
-      "source": [
-        ""
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Untitled3 (1).ipynb",
+      "private_outputs": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
